# lang-detect

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.json
src/: eval.ts  index.ts  lite.ts
src/nn/: detect.ts  forward.ts  load.node.ts  load.ts  normalize.ts
train/: average_seeds.py  datasets.py  download_dataset.sh  eval.py  experiments.py  export.py  pq.py  pyproject.toml  strings_enc.py  train.py
